# -practical_exercise

./: README.md
commodity_manager/: CMakeLists.txt  commodity.html
commodity_manager/include/: comm_operation.h  commodity.h  file_io.h  menu.h
commodity_manager/src/: comm_operation.c  file_io.c  main.c  menu.c
commodity_manager/test/: test_commodity.c
